apps/discord/neural-meme/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neural-meme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neural-meme
  template:
    metadata:
      labels:
        app: neural-meme
    spec:
      containers:
      - name: neural-meme
        # https://github.com/maxwlang/neural-meme/releases/latest
        image: ghcr.io/maxwlang/neural-meme:v1.0.0
        resources:
          limits:
            memory: "256Mi"
            cpu: "1000m"
          requests:
            memory: "64Mi"
            cpu: "250m"
